--- a/leptos/Cargo.toml
+++ b/leptos/Cargo.toml
@@ -20,6 +20,7 @@ typed-builder = "0.14"
 server_fn = { workspace = true }
 web-sys = { version = "0.3.63", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
+spez = "0.1.2"
 
 [dev-dependencies]
 leptos = { path = "." }
