--- a/leptos/Cargo.toml
+++ b/leptos/Cargo.toml
@@ -21,6 +21,8 @@ server_fn = { workspace = true }
 web-sys = { version = "0.3.63", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 spez = "0.1.2"
+serde = "1"
+serde_json = "1"
 
 [dev-dependencies]
 leptos = { path = "." }
